overflow fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -17,7 +17,7 @@ body {
     overflow-x:hidden;
 }
 
-rs-fullwidth-wrap {
+rs-fullwidth-wrap, rs-fullwidth-wrap > * {
     overflow:visible !important;
 }
 
